# game-api-task

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
conf/: .env
game/: .env  .pre-commit-config.yaml  Dockerfile  alembic.ini  main.py  pyproject.toml  start.app.sh
game/alembic/: env.py
game/alembic/versions/: 2fde974582de_make_start_at_timezone_aware.py  90f5494e6adf_add_timezone_to_start_at.py  a58158c2779d_restore_models.py  f20bce8f4839_initial.py
game/api/v1/: tournament.py
game/app/tournament/: commands.py
game/application/tournament/: commands.py
game/application/user/: commands.py
game/config/: deps.py  settings.py
game/domain/tournament/: models.py  services.py
game/domain/user/: models.py
game/infrastructure/: db.py  init_models.py
game/infrastructure/tournament/: repository.py
game/infrastructure/user/: repository.py
game/infrastucture/: db.py
game/schemas/: tournament.py  user.py
game/tests/: test_tournament.py
nginx/: default.conf
