[project]
name = "game-api"
version = "0.1.0"
description = "Sample api application manage tournaments"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg",
  "alembic",
  "pydantic>=2.0",
  "python-dotenv",
  "gunicorn"
]

[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "httpx",               
  "types-python-dotenv"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "B"]
fix = true

[tool.mypy]
python_version = "3.11"
plugins = ["sqlalchemy.ext.mypy.plugin"]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
