[tool.poetry]
name = "game-api"
version = "0.1.0"
description = "Sample api application manage tournaments"
authors = ["Mutalip jokermt235@yandex.com"]
package-mode = false
packages = [{ include = "game" }]  # имя папки с кодом

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
sqlalchemy = { extras = ["asyncio"], version = ">=2.0.0" }
asyncpg = "*"
alembic = "*"
pydantic = ">=2.0"
python-dotenv = "*"
gunicorn = "*"
pydantic-settings = "^2.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
httpx = "*"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
